--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Roboto:ital,wght@0,100;1,100&family=Wix+Madefor+Display&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>navigation-bar-with-search-bar
+</title>
 </head>
 <body>
     <div class="navcontainer">
